--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,5 +1,16 @@
 {
     "version": "2.0.0",
     "tasks": [
+        {
+            "label": "pytest",
+            "type": "shell",
+            "command": "${workspaceFolder}/.venv/bin/python -m pytest -q",
+            "problemMatcher": [],
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared",
+                "clear": true
+            }
+        }
     ]
 }
