--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "torch>=2.9.0",
     "torchaudio>=2.9.0",
     "torchvision>=0.24.0",
+    "python-utils @ file:${PROJECT_ROOT}/modules/python-utils",
 ]
 
 [dependency-groups]
