[UPDATE] 모듈로 사용하기 위한 pyproject 수정

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,4 +37,4 @@ where = ["."]
 include = ["sjaipy*"]
 
 [tool.uv.sources]
-sjpy = {path = "modules/sjpy", editable = true}
+# sjpy = {path = "modules/sjpy", editable = true}
