--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -1,10 +1,11 @@
-CONTAINER_NAME=sjaipy_Dev
+CONTAINER_NAME=sjaipy_dev
 
 CONTAINER_USER=root
 CONTAINER_UID=0
 CONTAINER_HOME=/root
-CONTAINER_WORK_DIR=/workspaces/dev
-CONTAINER_UV_GROUP=test
+CONTAINER_WORK_DIR=/workspaces/sjaipy
+CONTAINER_DATA_DIR=/workspaces/data
+CONTAINER_UV_GROUP=test,dev
 
 CONTAINER_VOLUME=F:/docker-volume
 CONTAINER_GPU_ID=0
