--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,22 @@
 {
-	"name": "sjaipy_Dev",
+	"name": "sjaipy_dev",
 	"dockerComposeFile": "./docker-compose.yml",
-	"service": "dev",
-	"workspaceFolder": "/workspaces/dev",
-    "postCreateCommand": "bash /workspaces/dev/.devcontainer/sjsh/LIA/post_create_command.sh",
+	"service": "service",
+    "remoteUser": "root",
+	"workspaceFolder": "/workspaces/sjaipy",
+    "postCreateCommand": "bash ${containerWorkspaceFolder}/.devcontainer/post_create_command.sh",
 
     // for linux container
-    // "initializeCommand": "[ ! -d ${localWorkspaceFolder}/.devcontainer/sjsh ] && git clone --branch v0.0.3 https://github.com/sangjung0/sjsh.git ${localWorkspaceFolder}/.devcontainer/sjsh || true",
+    // "initializeCommand": [
+    //  "${localWorkspaceFolder}/.devcontainer/initialize_command.sh",
+    //  "${localWorkspaceFolder}"
+    // ],
 
     // for windows container
-    "initializeCommand": "cd /d ${localWorkspaceFolder} && if not exist .devcontainer/sjsh git clone --branch v0.0.3 https://github.com/sangjung0/sjsh.git .devcontainer/sjsh",
+    "initializeCommand": [
+        "${localWorkspaceFolder}\\.devcontainer\\initialize_command.cmd",
+        "${localWorkspaceFolder}"
+    ],
 
 	"features": {
 		"ghcr.io/devcontainers/features/github-cli:1": {}
@@ -29,7 +36,6 @@
                 "streetsidesoftware.code-spell-checker",
                 "naumovs.color-highlight",
                 "oderwat.indent-rainbow",
-                "visualstudioexptteam.vscodeintellicode",
                 "ionutvmi.path-autocomplete",
                 "mgesbert.python-path",
                 "foxundermoon.shell-format",
